Fix for nav bar clipping issue

--- a/styles/layout.scss
+++ b/styles/layout.scss
@@ -5,5 +5,6 @@ body {
   font-family: $bodyText;
   display: flex;
   flex-direction: column;
+  z-index: 0;
 
 }
