--- a/styles/nav.scss
+++ b/styles/nav.scss
@@ -10,6 +10,7 @@ nav {
   width: 100%;
   position: fixed;
   top: 0px;
+  z-index: 2;
 
   span {
     font-family: $logoText;
@@ -66,4 +67,7 @@ nav {
   padding-top: 100px;
   height: 5em;
   width: 100%;
+  position: fixed;
+  top:0px;
+  z-index: 1;
 }
